--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -7,11 +7,10 @@
     <title>Traverse</title>
 </head>
 <body>
-    Before
-    <br>
-    <%- body %> 
-    
-    <br>
-    After
+     
+    <%- include('../partials/header.ejs') %> 
+    <%- include('../partials/errorMessage.ejs') %> 
+    <%- body %>    
+      
 </body>
 </html>
